--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         </button>
-    <a class="navbar-brand" href="#">Aadhya Shakti</a>
+    <a class="navbar-brand" href="https://x.thunkable.com/copy/bca116834b502a53b9b95c049e7ca39d">Aadhya Shakti</a>
+               
+ 
     </div>
     
     <div class="collapse navbar-collapse" id="mynavbar">
